--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@fastify/cors": "^11.0.1",
     "better-sqlite3": "^11.9.1",
+    "csv-writer": "^1.6.0",
     "dotenv-safe": "^9.1.0",
     "drizzle-orm": "^0.42.0",
-    "fastify": "^5.3.2"
+    "fastify": "^5.3.2",
+    "octokit": "^5.0.3"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
